Source/WebCore/loader/DocumentThreadableLoader.h
@@ -33,7 +33,6 @@
 
 #include "CachedRawResourceClient.h"
 #include "CachedResourceHandle.h"
-#include "ResourceTimingInformation.h"
 #include "ThreadableLoader.h"
 
 namespace WebCore {
@@ -106,9 +105,6 @@ namespace WebCore {
         ThreadableLoaderClient* m_client;
         Document& m_document;
         ThreadableLoaderOptions m_options;
-#if ENABLE(WEB_TIMING)
-        ResourceTimingInformation m_resourceTimingInfo;
-#endif
         bool m_sameOriginRequest;
         bool m_simpleRequest;
         bool m_async;
